style.css
/* Thank you for using Party Pal v1.0 */

/* Created by Sharty Themes https://github.com/ShartyThemes */

/* CSS-V1-CHECK (Note:if you are adding this code manually, do not remove this comment or else any existing css will be overwritten) */

@font-face {
  font-family: W95;
  src: url('https://sharty-themes.b-cdn.net/party-pal/fonts/W95FA.otf');
}

@font-face {
  font-family: VGA;
  src: url('https://sharty-themes.b-cdn.net/party-pal/fonts/vga.woff2') format("woff2");
}

#boot-screen {
  background: #000;
  font-family: VGA, monospace;
  font-size: 22px;
  justify-content: center;
  overflow: hidden;
  margin: 0;
  z-index: 9999;
  position: fixed;
  top: 50%;  left: 50%;  transform: translate(-50%, -50%);
  width: 100%; height: 100%;
}

#boot-screen p {
  margin-left: 20px;
  color: #cccccc;
}

#pal-boardlist p {
  cursor: pointer;
}

#pal-boardlist p:hover {
  color: #ff0000 !important;
}

#pal-box {
  width: inherit;
  background: #ffffff;
  color: #000000;
  border: 1px solid #000000;
  display: flex;
  flex-direction: row;
  margin-bottom: 20px;
}

#pal-box-left {
  background-image: url('https://sharty-themes.b-cdn.net/party-pal/images/banner.png');
  height: 150px;
  width: 50%;
  background-size: 400px;
  background-repeat: no-repeat;
  background-position: -45px -45px;
}

#pal-box-right h2 {
  padding: 3px 7px;
  text-align: left;
  background-color: #2f8eff;
  color: #ffffff;
  margin-bottom: 15px;
}

#eye-container {
  display: inline-block;
  width: 40px;
  height: 40px;
  position: relative;
  left: 10px;
  top: 15px;
  border: 3px solid rgb(136, 136, 136);
  border-radius: 50px;
  overflow: hidden;
}

#eye {
  background-color: red;
  border: none;
  border-radius: 50px;
  width: 100%; height: 100%;
}

#pupil {
  position: absolute;
  top: 50%;  left: 50%;  transform: translate(-50%, -50%);
  pointer-events: none;
}

.hidden {
  display: none !important;  
}

.popup-styles {
  position: fixed;
  background-color: #ffffcc; 
  padding: 10px;  
  border: 1.5px solid #000000;  
  z-index: 9996;
  border-radius: 8px;
  font-family: W95;
  user-select: none;
  color: black;
}

.popup-styles::after {
  content: '';
  position: absolute;
  border-style: solid;
  border-width: 0 15px 15px 0;
  border-color: transparent #ffffcc transparent transparent;
  bottom: -12.5px;
  right: 10px;
  z-index: -1;
}

.popup-styles::before {
  content: '';
  position: absolute;
  border-style: solid;
  border-width: 0 16px 16px 0;
  border-color: transparent #000000 transparent transparent;
  bottom: -16px;
  right: 8.5px;
  z-index: -2;
}

.popup-styles p::after {
  content: url('https://sharty-themes.b-cdn.net/party-pal/images/pal.png');
  position: fixed;
  transform-origin: top left;
  transform: scale(.17);
  left: 100%;
  top: 95%;
}

.dance::after {
  animation: dance 1.15s infinite linear forwards;
  content: url('https://sharty-themes.b-cdn.net/party-pal/images/pal-headphones.png') !important;
}

@keyframes dance {
  0% {
    transform: rotate(0) scale(1);
    transform-origin: bottom;
  }

  12.5% {
    transform: rotate(3deg) scale(.9, 1.15);
    transform-origin: bottom;
  }

  25% {
    transform: rotate(6deg) scale(1);
    transform-origin: bottom;
  }

  37.5% {
    transform: rotate(3deg) scale(.9, 1.15);
    transform-origin: bottom;
  }

  50% {
    transform: rotate(0) scale(1);
    transform-origin: bottom;
  }

  62.5% {
    transform: rotate(-3deg) scale(.9, 1.15);
    transform-origin: bottom;
  }

  75% {
    transform: rotate(-6deg) scale(1);
    transform-origin: bottom;
  }

  87.5% {
    transform: rotate(-3deg) scale(.9, 1.15);
    transform-origin: bottom;
  }

  100% {
    transform: rotate(0) scale(1);
    transform-origin: bottom;
  }
}

.spin {
  animation: spin 5s ease-out forwards;
}

@keyframes spin {
  from {transform: rotate(0);}
  to {transform: rotate(360deg)}
}

#popup {
  top: 50%;  left: 50%;  transform: translate(-50%, -50%); 
  width: 150px;
  animation: pulsate 0.1s ease-in-out forwards;
}

@keyframes pulsate {
  0% { transform: scale(1); }
  30% { transform: scale(1.1); }
  100% { transform: scale(1); }
}

#popup p {
  margin-top: 0;
}

.popup-btn-container {
  display: block;
  text-align: center;
}

#popup button, #options-popup button {
  background-color: #ffffcc; 
  padding: 3px 14px; 
  border: none;
  box-shadow: 0 0 0 1px silver;
  cursor: pointer; 
  border-radius: 5px;
  font-family: W95;
  font-size: 14px;
  margin: 5px;
  color: black;
}

#popup img {
  border-radius: 8px;
  margin: auto;
  margin-bottom: 15px;
  max-width: 60px;
  display: block;
  pointer-events: none;
}

#popup button:hover {
 box-shadow: 0 0 0 1.5px silver;
}

#no-btn {
  float: right;
}

.music-btns {
  box-shadow: 0 0 0 1px black !important;

}

.music-btns:hover {
  scale: 102%;
}
.music-btns:active {
  scale: 100%;
}

.selected-text {
  overflow: hidden;
  text-overflow: ellipsis;
}

.selected-text:hover {
  overflow: visible;
}

.options-background {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color:rgba(0, 0, 0, 0.5);
  top: 0;
  left: 0;
  z-index: 9997;
}

#options-popup {
  top: 50%;  left: 50%;  transform: translate(-50%, -50%); 
  max-width: fit-content;
  z-index: 9998;
  padding: 0 20px 10px 20px;
  font-size: 14px;
  text-align: center;
  display: flex;
  flex-direction: column;
}

#options-popup iframe {
  border-radius: 8px;
  margin-bottom: 12px;
  margin-top: 15px;
  border: 1.5px solid black;
  display: block;
  pointer-events: all;
}

#options-popup button:hover {
  box-shadow: 0 0 0 1.5px silver;
}

